some JS stuff added for the calc

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -23,10 +23,32 @@
                     <div id="topofbar">
                         <label for="places">Places:</label>
                         <select name="places" id="places">
-                          <option value="0">Leeston</option>
-                          <option value="1">Southbridge</option>
-                          <option value="2">Place 3</option>
-                          <option value="3">Place 4</option>
+                            <option value="0">Alexandra</option>
+                            <option value="1">Blenheim</option>
+                            <option value="2">Christchurch</option>
+                            <option value="3">Collingwood</option>
+                            <option value="4">Cromwell</option>
+                            <option value="5">Dunedin</option>
+                            <option value="6">Franz Josef</option>
+                            <option value="7">Geraldine</option>
+                            <option value="8">Gore</option>
+                            <option value="9">Greymouth</option>
+                            <option value="10">Haast</option>
+                            <option value="11">Invercargill</option>
+                            <option value="12">Kaikoura</option>
+                            <option value="13">Lake Tekapo</option>
+                            <option value="14">Milford Sound</option>
+                            <option value="15">Mount Cook</option>
+                            <option value="16">Murchison</option>
+                            <option value="17">Nelson</option> 
+                            <option value="18">Oamaru</option>
+                            <option value="19">Picton</option>
+                            <option value="20">Queenstown</option>
+                            <option value="21">Te Anau</option>
+                            <option value="22">Timaru</option>
+                            <option value="23">Twizel</option>
+                            <option value="24">Wanaka</option>
+                            <option value="25">Westport</option>
                       </select>
                         <div id="buttonset">
                             <button onclick="addPlace()">Add</button>
@@ -41,7 +63,7 @@
             <main class="page-main">
                 <div class="content">
                     <div id="mapbox">
-                        <img src="https://via.placeholder.com/900x350">
+                        <img src="">
                     </div>
                 </div>
             </main>
