--- a/Templates/index.html
+++ b/Templates/index.html
@@ -51,12 +51,20 @@
                             <option value="25">Westport</option>
                       </select>
                         <div id="buttonset">
-                            <button onclick="addPlace()">Add</button>
+                            <button onclick="addPlaceWithDropDown()">Add</button>
                             <button onclick="clearList()">reset</button>
                             <button onclick="calFuelAndDis()">cal</button>
                         </div>
                         <div id="listarea">
-    
+                            <div class="item">
+                                <img class="itemphoto" src="../Static/img/external-deuhiufsguiyvgdsiufer.jpg" alt="">
+                                <div class="name">
+                                    <p>Te Anau</p>
+                                </div>
+                                <div class="xbox">
+                                    <p>x</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
             </aside>
