--- a/Templates/index.html
+++ b/Templates/index.html
@@ -14,8 +14,10 @@
                 <div class="content menu-bar">
                     <a class="title">Site Title</a>
                     <button class="buttons" onclick="quit()">Quit</button>
-                    <button class="buttons">link 2</button>
-                    <button class="buttons">link 3</button>
+                    <button class="buttons" onclick="save()">save</button>
+                    <button class="buttons" onclick="load()">load</button>
+                </div>
+                <div id="entry">
                 </div>
             </header>
             <aside class="page-leftbar">
@@ -59,10 +61,7 @@
                             <div class="item">
                                 <img class="itemphoto" src="../Static/img/external-deuhiufsguiyvgdsiufer.jpg" alt="">
                                 <div class="name">
-                                    <p>Te Anau</p>
-                                </div>
-                                <div class="xbox">
-                                    <p>x</p>
+                                    <p class="name">Te Anau<a class="xbox">x</a></p>
                                 </div>
                             </div>
                         </div>
