--- a/Templates/index.html
+++ b/Templates/index.html
@@ -8,11 +8,11 @@
         <link href="../Static/CSS/Style.css" rel="stylesheet" type="text/css"> 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
-        <link rel="shortcut icon" type="image/png" href="lib/jasmine-{#.#.#}/jasmine_favicon.png">
-        <link rel="stylesheet" type="text/css" href="lib/jasmine-{#.#.#}/jasmine.css">
-        <script type="text/javascript" src="lib/jasmine-{#.#.#}/jasmine.js"></script>
-        <script type="text/javascript" src="lib/jasmine-{#.#.#}/jasmine-html.js"></script>
-        <script type="text/javascript" src="lib/jasmine-{#.#.#}/boot.js"></script>
+        <link rel="shortcut icon" type="image/png" href="lib/jasmine-{3.10.0}/jasmine_favicon.png">
+        <link rel="stylesheet" type="text/css" href="lib/jasmine-{3.10.0}/jasmine.css">
+        <script type="text/javascript" src="lib/jasmine-{3.10.0}/jasmine.js"></script>
+        <script type="text/javascript" src="lib/jasmine-{3.10.0}/jasmine-html.js"></script>
+        <script type="text/javascript" src="lib/jasmine-{3.10.0}/boot.js"></script>
     </head>
     <body>
         <div class="grid">
@@ -74,7 +74,7 @@
                 </div>
             </main>
             <footer class="page-footer">
-                <div class="content">
+                <div class="content" id="footer">
                     <p>Footer</p>
                 </div>
             </footer>
