added the output for calFuelAndDis

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -75,7 +75,12 @@
             </main>
             <footer class="page-footer">
                 <div class="content" id="footer">
-                    <p>Footer</p>
+                    <label for="fuelperkm">how many liters of fuel do your car use per km</label>
+                    <input type="number" id="fuelperkm">
+                    </br>
+                    <label for="priceoffuel">what is the price of fuel per liter in your area</label>
+                    <input type="number" id="priceoffuel">
+                    <div id="footertextarea"></div>
                 </div>
             </footer>
         </div>
