changed some names and fixed somestuff

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>flatmate hub</title>
         <script src="../Static/Js/main.js"></script>
-        <script src="../Static/Js/ears.js"></script>
+        <script src="../Static/Js/setuplisteners.js"></script>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <link href="../Static/CSS/Style.css" rel="stylesheet" type="text/css"> 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
-        <link rel="shortcut icon" type="image/png" href="lib/jasmine-{3.10.0}/jasmine_favicon.png">
-        <link rel="stylesheet" type="text/css" href="lib/jasmine-{3.10.0}/jasmine.css">
-        <script type="text/javascript" src="lib/jasmine-{3.10.0}/jasmine.js"></script>
-        <script type="text/javascript" src="lib/jasmine-{3.10.0}/jasmine-html.js"></script>
-        <script type="text/javascript" src="lib/jasmine-{3.10.0}/boot.js"></script>
     </head>
     <body>
         <div class="grid">
             <header class="page-header">
                 <div class="content menu-bar">
-                    <a class="title">Site Title</a>
+                    <a class="title">Flat</a>
                     <button class="buttons" id="quit" onclick="">Quit</button>
                     <button class="buttons" id="save">save</button>
                     <button class="buttons" id="load">load</button>
