--- a/Templates/index.html
+++ b/Templates/index.html
@@ -8,67 +8,76 @@
         <link href="../Static/CSS/Style.css" rel="stylesheet" type="text/css"> 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="grid">
-            <header class="page-header">
-                <div class="content menu-bar">
+        <div class="container">
+            <div class="row" id="topbar">
+                <div class="col-2">
                     <a class="title">Flat</a>
+                </div>
+                <div class="col-7"></div>
+                <div class="col-1">
                     <button class="buttons" id="quit" onclick="">Quit</button>
+                </div>
+                <div class="col-1">
                     <button class="buttons" id="save">save</button>
+                </div>
+                <div class="col-1">
                     <button class="buttons" id="load">load</button>
+                </div>
+            </div>
+            <div class="row">
                 </div>
                 <div id="entry">
                 </div>
-            </header>
-            <aside class="page-leftbar">
-                <div class="content">
-                    <div id="topofbar">
-                        <label for="places">Places:</label>
-                        <select name="places" id="places">
-                            <option value="0">Alexandra</option>
-                            <option value="1">Blenheim</option>
-                            <option value="2">Christchurch</option>
-                            <option value="3">Collingwood</option>
-                            <option value="4">Cromwell</option>
-                            <option value="5">Dunedin</option>
-                            <option value="6">Franz Josef</option>
-                            <option value="7">Geraldine</option>
-                            <option value="8">Gore</option>
-                            <option value="9">Greymouth</option>
-                            <option value="10">Haast</option>
-                            <option value="11">Invercargill</option>
-                            <option value="12">Kaikoura</option>
-                            <option value="13">Lake Tekapo</option>
-                            <option value="14">Milford Sound</option>
-                            <option value="15">Mount Cook</option>
-                            <option value="16">Murchison</option>
-                            <option value="17">Nelson</option> 
-                            <option value="18">Oamaru</option>
-                            <option value="19">Picton</option>
-                            <option value="20">Queenstown</option>
-                            <option value="21">Te Anau</option>
-                            <option value="22">Timaru</option>
-                            <option value="23">Twizel</option>
-                            <option value="24">Wanaka</option>
-                            <option value="25">Westport</option>
-                      </select>
-                        <div id="buttonset">
-                            <button id="addPlaceButton">Add</button>
-                            <button id="clearListButton">reset</button>
-                            <button id="calFuelAndDisButton">cal</button>
-                        </div>
-                        <div id="listarea"></div>
-                    </div>
-            </aside>
-            <main class="page-main">
-                <div class="content">
+            <div class="row">
+                <div class="col-3" id="sidebar">
+                            <label for="places">Places:</label>
+                            <select name="places" id="places">
+                                <option value="0">Alexandra</option>
+                                <option value="1">Blenheim</option>
+                                <option value="2">Christchurch</option>
+                                <option value="3">Collingwood</option>
+                                <option value="4">Cromwell</option>
+                                <option value="5">Dunedin</option>
+                                <option value="6">Franz Josef</option>
+                                <option value="7">Geraldine</option>
+                                <option value="8">Gore</option>
+                                <option value="9">Greymouth</option>
+                                <option value="10">Haast</option>
+                                <option value="11">Invercargill</option>
+                                <option value="12">Kaikoura</option>
+                                <option value="13">Lake Tekapo</option>
+                                <option value="14">Milford Sound</option>
+                                <option value="15">Mount Cook</option>
+                                <option value="16">Murchison</option>
+                                <option value="17">Nelson</option> 
+                                <option value="18">Oamaru</option>
+                                <option value="19">Picton</option>
+                                <option value="20">Queenstown</option>
+                                <option value="21">Te Anau</option>
+                                <option value="22">Timaru</option>
+                                <option value="23">Twizel</option>
+                                <option value="24">Wanaka</option>
+                                <option value="25">Westport</option>
+                        </select>
+                            <div id="buttonset">
+                                <button id="addPlaceButton">Add</button>
+                                <button id="clearListButton">reset</button>
+                                <button id="calFuelAndDisButton">cal</button>
+                            </div>
+                            <div id="listarea"></div>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-8">
                     <div id="mapbox">
                         <img src="">
                     </div>
                 </div>
-            </main>
-            <footer class="page-footer">
+            </div>
+            <div class="row">
                 <div class="content" id="footer">
                     <label for="fuelperkm">how many liters of fuel do your car use per km</label>
                     <input type="number" id="fuelperkm">
@@ -77,7 +86,7 @@
                     <input type="number" id="priceoffuel">
                     <div id="footertextarea"></div>
                 </div>
-            </footer>
+            </div>
         </div>
     </body>
     <footer>
