--- a/Templates/index.html
+++ b/Templates/index.html
@@ -62,7 +62,7 @@
             <main class="page-main">
                 <div class="content">
                     <div id="mapbox">
-                        <img src="">
+                        <img src="" alt="map">
                     </div>
                 </div>
             </main>
