--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,6 +4,7 @@
         <title>flatmate hub</title>
         <script src="../Static/Js/main.js"></script>
         <script src="../Static/Js/setuplisteners.js"></script>
+        <script src="../Static/Js/buautify.js"></script>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <link href="../Static/CSS/Style.css" rel="stylesheet" type="text/css"> 
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
@@ -11,21 +12,24 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body id="body">
         <div class="container">
-            <div class="row" id="topbar">
+            <div class="row colored" id="topbar">
                 <div class="col-2">
-                    <a class="title">Flat</a>
+                    <a class="title colored" id="title">Flat</a>
                 </div>
-                <div class="col-7"></div>
+                <div class="col-6"></div>
                 <div class="col-1">
-                    <button class="buttons" id="quit" onclick="">Quit</button>
-                </div>
-                <div class="col-1">
-                    <button class="buttons" id="save">save</button>
+                    <button class="buttons colored" id="color">color</button>
                 </div>
                 <div class="col-1">
-                    <button class="buttons" id="load">load</button>
+                    <button class="buttons colored" id="quit">Quit</button>
+                </div>
+                <div class="col-1">
+                    <button class="buttons colored" id="save">save</button>
+                </div>
+                <div class="col-1">
+                    <button class="buttons colored" id="load">load</button>
                 </div>
             </div>
             <div class="row">
@@ -33,7 +37,7 @@
                 <div id="entry">
                 </div>
             <div class="row">
-                <div class="col-3" id="sidebar">
+                <div class="col-3 colored" id="sidebar">
                             <label for="places">Places:</label>
                             <select name="places" id="places">
                                 <option value="0">Alexandra</option>
@@ -70,15 +74,12 @@
                             </div>
                     <div id="listarea"></div>
                 </div>
-                <div class="col-1"></div>
                 <div class="col-8">
-                    <div id="mapbox">
-                        <img src="">
-                    </div>
+                    <div id="mapbox"></div>
                 </div>
             </div>
-            <div class="row">
-                <div class="content" id="footer">
+            <div class="row colored">
+                <div class="content colored" id="footer">
                     <label for="fuelperkm">how many liters of fuel do your car use per km</label>
                     <input type="number" id="fuelperkm">
                     </br>
